# creatorclip

./: .dockerignore  .env.example  .gitignore  .squawk.toml  CLAUDE.md  Dockerfile  LEFT_OFF.md  Project Idea.md  README.md  alembic.ini  api_key.py  auth.py  config.py  crypto.py  db.py  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  event_log.py  flags.py  limiter.py  main.py  models.py  notes_for_issues.txt  observability.py  pyproject.toml  pytest.ini  redact.py  render.yaml  requirements-dev.txt  requirements.txt  shared_resources.py  verbose.py  walkthrough.md
.claude/commands/: assess.md  issue-workflow.md
.claude/hooks/: session-start.sh
.githooks/: pre-push
.github/workflows/: activate-rls.yml  ci.yml  deploy.yml  docker-publish.yml  freshness.yml  health-check.yml  integration.yml  llm-e2e-nightly.yml  mutation.yml  quality.yml  staging-drills.yml
alembic/: DOWNGRADE_EXCEPTIONS  env.py
alembic/versions/: 0001_initial_schema.py  0002_add_stripe_customer_id.py  0002_billing.py  0003_minute_deductions.py  0004_video_done_creator_refreshed.py  0005_dna_idempotency.py  0005_rls_policies.py  0006_vector_and_fk_indexes.py  0007_clip_outcome_final.py  0008_dna_build_job_unique.py  0009_improvement_briefs.py  0010_rls_policies.py  0011_widen_pack_id.py  0012_creator_identity.py  0013_refund_pack_id_unique.py  0014_backfill_onboarding_state.py  0015_creator_api_keys.py  0016_improvement_brief_unique.py  0017_creator_insights.py  0018_feedback_tags.py  0019_clip_style_preset.py  0020_creator_insight_index.py  0021_clip_cleaned_render_uri.py  0022_creator_analysis_mode.py  0023_creator_trial_ends_at.py  0024_video_origin_enum.py  0025_event_logs.py  0026_chat.py  0027_clip_publications.py  0027_data_exports.py  0028_clip_publications.py  0028_creator_brand_kit.py  0028_usage_cost_estimate.py  0029_creator_brand_kit.py  0030_clip_publications.py  0031_notifications.py  0032_clip_publication_schedule.py  0033_consent_record.py  0034_age_confirmation.py  0035_video_youtube_id_nullable.py  (+11 more)
analysis/: brief.py
billing/: ledger.py  packs.py  refund.py  spend_guard.py  stripe_client.py  tiers.py
chat/: __init__.py  intake.py  prompt.py  runner.py  tools.py
clip_engine/: __init__.py  candidates.py  captions.py  edits.py  filler.py  ranking.py  reframe.py  render.py  scoring.py  summary_select.py  window.py
deploy/: README.md
dna/: brief.py  builder.py  conflict.py  embeddings.py  identity.py  onboarding.py  profile.py
docs/: ACCESS.md  BETA_LAUNCH_RUNBOOK.md  BRANCHING.md  CLIPPING_PRINCIPLES.md  COMPETITIVE_RESEARCH.md  COMPLIANCE.md  DECISIONS.md  DEPLOYMENT.md  EDGE_SECURITY.md  GO_LIVE.md  INCIDENT_RESPONSE.md  ISSUE_APPROVED_PLANS.md  MIGRATIONS.md  OFF_COURSE_BUGS.md  PRD.md  PRODUCTION_COMMANDS.md  PROJECT_STATE.md  README.md  RENDER_DEPLOY.md  RESEARCH_PROMPT_AGENTIC_CACHING_COST.md  RESEARCH_PROMPT_LOGGING_OBSERVABILITY.md  RESEARCH_PROMPT_SECURITY_SCALABILITY.md  RUNBOOKS.md  SECRETS.md  SKILL_FRESHNESS.md  SOT.md  STAGING_ACCESS.md  SUBPROCESSORS.md  UI.md  issues.md  issues_edge_case_hardening.md  other_apps_research.md
docs/archive/: BETA_LAUNCH_RUNBOOK.md  ISSUE_APPROVED_PLANS.md  KICKSTART.md  PRODUCTION_COMMANDS.md  issues_snapshot_2026-06-22.md  (+1 more)
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.prod.ts  playwright.config.ts  vite.config.ts
improvement/: brief.py  jobs.py
ingestion/: audio.py  signals.py  transcribe.py
knowledge/: chapters.py  clip_captions.py  clip_explain.py  clip_titles.py  hooks.py  thumbnails.py  titles.py  util.py
notify/: __init__.py  copy.py  dedupe.py  mailer.py
preference/: _scorer_cache.py  decay.py  efficacy.py  features.py  model.py  style_learn.py  train.py
routers/: _owned.py  _schemas.py  activity.py  analysis.py  api_keys.py  auth.py  billing.py  chat.py  clips.py  creators.py  export.py  improvement.py  insights.py  logs.py  notifications.py  publications.py  review.py  schemas.py  tasks.py  thumbnails.py  titles.py  upload_intel.py  videos.py
scripts/: backup_pg.sh  backup_redis.sh  check_downgrades.py  ci_local.sh  clip_pipeline_state.py  deploy.sh  dev_session_setup.sh  doctor.py  drills.py  eval_efficacy.py  flags.py  live_smoke.py  llm_e2e.py  llm_harness.py  r2_inspect.py  reapply_erasures.py  repro_ingest_render.py  repro_render.py  rotate_token_key.py  setup-runner.sh  setup_hooks.sh  verify_deploy.sh
static/: _design-tokens.css  accessibility.html  activeTasks.js  activity.js  activityPanel.js  analysis.html  auth.js  components.css  early-access.html  editor-layout.css  editor.js  hero.css  index.html  insights.html  login.html  onboarding.html  page-shell.css  pricing.html  privacy.html  profile.html  progressStream.js  review.html  tooltip.js  tos.html  util.js  walkthrough.html
tests/: _helpers.py  conftest.py  test_account_deletion.py  test_account_deletion_integration.py  test_activity.py  test_analysis.py  test_analytics.py  test_analytics_fairness_integration.py  test_analytics_retention_purge_integration.py  test_analytics_summary.py  test_analyze_performer.py  test_anthropic_stream.py  test_api_key.py  test_api_keys_integration.py  test_api_router_surface.py  test_auth.py  test_backup_config.py  test_beat_ha.py  test_billing.py  test_billing_grant_idempotency_integration.py  test_billing_idempotency.py  test_billing_integration.py  test_billing_reconciliation.py  test_billing_refund.py  test_billing_refund_integration.py  test_brand_kit.py  test_brief_caching.py  test_brief_quota.py  test_captions.py  test_catalog_sync.py  test_celery_config.py  test_celery_event_loop.py  test_chapters.py  test_chat.py  test_chat_isolation_integration.py  test_ci_config.py  test_clip_captions.py  test_clip_counts.py  test_clip_download.py  test_clip_engine.py  (+154 more)
upload_intel/: timing.py
worker/: __init__.py  anthropic_stream.py  celery_app.py  progress.py  schedule.py  storage.py  tasks.py
youtube/: _http.py  _redis.py  analytics.py  categories.py  data_api.py  errors.py  ingest.py  oauth.py  publish.py  quota.py
(+306 files in other folders)
