# Issue 297: CalVer (YYYY.MM.patch) — chronological, readable, no arbitrary major/minor
# decisions. importlib.metadata.version('creatorclip') reads this at runtime.
# Increment the patch when shipping a hotfix in the same month; reset to 0 on month roll.
[project]
name = "creatorclip"
version = "2026.6.0"
description = "The only AI editor that truly knows your channel."
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — enforced by formatter, not linter
    "B008",  # do not perform function calls in default arguments (FastAPI Depends)
    "SIM108", # ternary operator — sometimes less readable
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is fine in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- Assessment gates (see docs/assessment/README.md for the ratchet) ---------

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]   # type BaseSettings/BaseModel correctly (no spurious call-arg)
ignore_missing_imports = true   # gradual: don't fail on untyped third-party stubs
warn_unused_ignores = true
warn_redundant_casts = true
exclude = ['^alembic/', '^tests/']
# Ratchet closed (Issue 78-R, 2026-07-02): the original 30-error backlog went to 0 in
# Issue 78c; the remaining 59 untyped/incomplete-def violations (worker/tasks.py,
# scripts/, main.py, routers/, ...) were annotated, so both flags are now enforced.
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.coverage.run]
branch = true
omit = ["tests/*", "alembic/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.bandit]
exclude_dirs = ["tests", "alembic", ".venv"]

# --- pip-audit: accepted-risk ignore list (Issue 107, 2026-05-31) ---------------
# Every entry MUST have a comment explaining the reason and re-evaluate date.
# Keep this list in lockstep with PIP_AUDIT_IGNORES in
# .claude/skills/production-assessment/scripts/run_layer0.py.
[tool.pip-audit]
ignore-vulns = [
    # pytest GHSA-6w46-j5rx-g56g — local /tmp predictable-name priv/DoS.
    # Fixed only in pytest 9; pytest-asyncio<0.25 caps pytest<9. Dev/CI only,
    # not a runtime exposure. Re-evaluate when the test stack is bumped together.
    "GHSA-6w46-j5rx-g56g",
    # starlette PYSEC-2026-161 — LIFTED in Issue 143 (2026-06-17): the starlette-1.x
    # migration shipped (FastAPI 0.137.1 + starlette 1.3.1), so this now has a real
    # fix in our compatible range and is no longer accepted-risk.
    # pip GHSA-4xh5-x5gv-qwph (CVE-2025-8869) — symlink check on tar extraction.
    # pip is a dev/build-time tool, not a runtime dep. Requires installing a
    # maliciously crafted archive. Re-evaluate when venv is rebuilt with pip>=25.3.
    "GHSA-4xh5-x5gv-qwph",
    # pip GHSA-6vgw-5pg2-w6jp (CVE-2026-1703) — wheel path traversal.
    # Same rationale as above (dev/build-time only). Re-evaluate with pip>=26.0.
    "GHSA-6vgw-5pg2-w6jp",
    # pip GHSA-58qw-9mgm-455v (CVE-2026-3219) — tar+ZIP concatenation confusion.
    # Same rationale (dev/build-time only). Re-evaluate with pip>=26.1.
    "GHSA-58qw-9mgm-455v",
    # pip GHSA-jp4c-xjxw-mgf9 (CVE-2026-6357) — post-install self-update import.
    # Same rationale (dev/build-time only). Re-evaluate with pip>=26.1.
    "GHSA-jp4c-xjxw-mgf9",
    # pip PYSEC-2026-196 — supply-chain CVE, fix requires pip>=26.1.2.
    # Same rationale as above (dev/build-time only, not a runtime dep).
    # Re-evaluate when the CI toolchain updates pip past 26.1.2.
    "PYSEC-2026-196",
]

# --- Mutation testing (Issue 273) — CADENCE-ONLY, report-not-gate -----------------
# mutmut targets ONLY the load-bearing core (~10-20% that must be correct): the
# clip_engine setup-vs-aftermath / peak comparisons, the recency-decay sign+math,
# and decrypt() token-security correctness. Line coverage proves these lines RUN;
# mutation testing proves the tests ASSERT on them. Runs on a weekly schedule
# (.github/workflows/mutation.yml), NEVER per-PR (slow; the standard warns against a
# per-PR mutation gate). limiter.py is intentionally EXCLUDED here — Issue 228 owns
# it on a parallel branch; fold it into paths_to_mutate after 228 merges (see
# docs/DECISIONS.md, 2026-06-24). Target score >80% (tolerate >75%, ratchet to >85%);
# survivors are triaged into test-gap follow-ups, never a build failure.
[tool.mutmut]
paths_to_mutate = [
    "clip_engine/scoring.py",
    "preference/decay.py",
    "crypto.py",
]
# mutmut copies the mutated source into a ./mutants/ sandbox, REMOVES the repo root
# from sys.path (so the original code can't shadow the mutants), and runs pytest from
# inside the sandbox. Everything the targeted tests import must therefore be copied in
# too. We copy:
#   - pytest.ini  — carries the UNIT-lane marker filter (addopts = -m "not integration
#                   and not quarantine"), asyncio_mode, and testpaths, so the sandbox
#                   run stays on the unit lane and never touches Postgres.
#   - the first-party import closure of tests/conftest.py (which imports `main`) plus
#     the three target modules: config/db/models/crypto + the billing/clip_engine/
#     dna/knowledge/preference/routers/worker/youtube/upload_intel packages and the
#     remaining top-level modules. (clip_engine/scoring.py, preference/decay.py and
#     crypto.py are auto-copied as the mutated paths.) limiter.py is copied only so the
#     app imports — it is NOT in paths_to_mutate, so it is never mutated (Issue 228).
also_copy = [
    "pytest.ini",
    "main.py",
    "config.py",
    "db.py",
    "models.py",
    "auth.py",
    "api_key.py",
    "limiter.py",
    "event_log.py",
    "observability.py",
    "redact.py",
    "billing",
    "clip_engine",
    "dna",
    "knowledge",
    "preference",
    "routers",
    "upload_intel",
    "worker",
    "youtube",
    "static",
]
# Scope the mutant test runs to the three test files that directly exercise the
# targeted modules. This keeps each mutant pass fast (the standard's guidance) and
# avoids unrelated full-suite collection fragility inside the sandbox.
pytest_add_cli_args_test_selection = [
    "tests/test_crypto.py",
    "tests/test_preference.py",
    "tests/test_scoring.py",
]
